--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.11.0",
     "element-plus": "^2.10.7",
     "pinia": "^3.0.3",
+    "uuid": "^11.1.0",
     "vue": "^3.5.18",
     "vue-cesium": "^3.2.9"
   },
