--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pinia": "^3.0.3",
     "uuid": "^11.1.0",
     "vue": "^3.5.18",
-    "vue-cesium": "^3.2.9"
+    "vue-cesium": "^3.2.9",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
