--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.11.0",
     "element-plus": "^2.10.7",
+    "mysql2": "^3.14.3",
     "pinia": "^3.0.3",
     "uuid": "^11.1.0",
     "vue": "^3.5.18",
