--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@eslint/js": "^9.31.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "cesium": "^1.132.0",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
     "globals": "^16.3.0",
     "less": "^4.4.0",
     "prettier": "3.6.2",
     "vite": "^7.0.6",
+    "vite-plugin-cesium": "^1.2.23",
     "vite-plugin-vue-devtools": "^8.0.0"
   }
 }
