feat: 根据时间改变数据

--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "server": "nodemon server.js"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "@turf/turf": "^7.2.0",
+    "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "echarts": "^5.0.0",
     "echarts-gl": "^2.0.9",
+    "element-plus": "^2.10.7",
+    "express": "^5.1.0",
     "font-awesome": "^4.7.0",
     "haoutil": "^2.6.0",
     "heatmapjs": "^2.0.2",
+    "lodash-es": "^4.17.21",
     "mapv": "^2.0.62",
     "mars3d": "^3.10.3",
     "mars3d-cesium": "^1.132.1",
@@ -31,11 +38,9 @@
     "mars3d-tdt": "^3.10.3",
     "mars3d-widget": "^3.6.5",
     "mars3d-wind": "^3.10.3",
-    "netcdfjs": "^3.0.0",
-    "axios": "^1.11.0",
-    "element-plus": "^2.10.7",
-    "lodash-es": "^4.17.21",
     "mysql2": "^3.14.3",
+    "netcdfjs": "^3.0.0",
+    "nodemon": "^3.1.10",
     "pinia": "^3.0.3",
     "uuid": "^11.1.0",
     "vue": "^3.5.18",
